Fix typo in Game#win?

--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,8 @@ TODO:
 
 * styling...
 
+* check diagonal wins
+
 * break cells/show.html.erb into a bunch of partials
 * Give error if try to submit photo with no image
 * link notifications to a board, instead of a subject AND a game
