--- a/README.rdoc
+++ b/README.rdoc
@@ -8,15 +8,12 @@ betterspecs.org
 
 TODO:
 
-* styling...
-
 * Associate visits with a board, and clean up auto_accept_after_a_day
 * When a photo is discarded, leave the notification, but unlink in log
   * This would be misleading if photo is pending
 
-* Ensure tutorial mentions any photo standing for a day is approved
 * Add instructions on main menu
-  * Add link back to main menu from /games and /themes
+  * Ensure tutorial mentions any photo standing for a day is approved
 
 * Throw away folders you're not using
 
@@ -27,7 +24,12 @@ TODO:
 * Possible things to use JS for:
   * Refresh boards#show, games#show, and games#index every minute
   * Make button to add more spaces for phrases in a theme
+    * Make sure that when re-rendering, add enough fields to fit phrases
   * Notifications (on game#show)
   * Adding players to game, on create
 
-* can only create games I'm in
+* can only create games I'm in?
+
+* Change themes#update to validate 16 phrases
+
+* finish jquery stuff to replace assign index.
